fixing alignment for abo ut page

--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,7 @@ body, html {
     gap: 30px;
     align-items: center;
     justify-content: flex-start; /* Align items to the left */
-    margin-bottom: 50px;
+    margin-right: 50px; /*it was htis line"*/
 }
 
 .about-image img {
